# Database-Agent-Nextjs

./: .env.example  README.md  alembic.ini  chack_databse_status.py  debug_agent.py  main.py  pyproject.toml  setup_database.py  test_table_creation.py  test_table_extraction_unit.py
agent/: __init__.py  config.py  human_approval.py  main_agent.py  simple_approval.py  system_prompts.py  tools.py  utils.py
agent_backup/: 01.txt  02.py  03.py  agent.txt
alembic/: env.py
alembic/versions/: 2324edcfe723_create_todos_table.py  55f2eaeee3a8_del_colom_in_todo_table.py  8250fc3549bc_update_todo_table.py  ecb45bc4e4dd_create_todos_table.py  f73e4fec74c9_update_todo_table2.py
config/: database_config.py
examples/: example_usage.py
model/: todo_model.py
